--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
-
+body {
+    background-color: bisque;
+  }
+h1 {
+    font-size: 20px;
+}
+p {
+    font-size: 12px;
+    color: green;
+}
+.div {
+    border: 2px dotted;
+    width: 100px;
+    height: 100px;
+}
+ol {
+    list-style-type: lower-alpha;
+}
+ul {
+    list-style-type: square;
+}
